# extlib

./: .gitignore  .gitmodules  .oclint  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
demos/: CMakeLists.txt  apix_serial.c  apix_tcp.c  apix_unix_tcp_serial.c
src/: CMakeLists.txt  apix-inl.h  apix-posix.c  apix-posix.h  apix-private.h  apix-service.h  apix-station.h  apix-stm32.c  apix-stm32.h  apix.c  apix.h  atbuf.c  atbufx.c  autobufx.c  autobufx.h  crc16.c  crc16x.c  err.c  err.h  errx.c  errx.h  exterr.c  exterr.h  extlog.c  extlog.h  extopt.c  extopt.h  jsonx.c  jsonx.h  listx.h  logx.c  logx.h  opt.c  optx.c  optx.h  quebufx.c  quebufx.h  ringbuf.c  ringbuf.h  ringbufx.c  (+8 more)
src/ext/: module.c  timer.c
src/posix/: module.c  module.h  task.c  timer.c
test/: CMakeLists.txt  extlog_test.c  extopt_test.c
tests/: CMakeLists.txt  mock_module.c  test_apix.c  test_atbufx.c  test_autobufx.c  test_err.c  test_errx.c  test_exterr.c  test_extlog.c  test_extopt.c  test_jsonx.c  test_logx.c  test_module.c  test_optx.c  test_quebufx.c  test_ringbufx.c  test_srrp.c  test_srrpx.c  test_svcx.c  test_task.c  test_timer.c
tests-dev/: test_apix_serial.c
tools/: build.sh  user-build.sh
